# docs/swagger.json
@@ -96,7 +96,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/user.ReadDataResponseUser"
+                            "$ref": "#/definitions/user.GetUserByIdResponseUser"
                         }
                     }
                 }
@@ -142,7 +142,7 @@
                 }
             }
         },
-        "user.ReadDataResponseUser": {
+        "user.GetUserByIdResponseUser": {
             "type": "object",
             "properties": {
                 "id": {
